# capturekit

./: .gitignore  CMakeLists.txt  PKGBUILD  PKGBUILD.ps1  new.md  package-lock.json  package.json
.github/workflows/: macos_build.yml
src/: App.tsx  main.cpp
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: downloader.rs  lib.rs  main.rs  setup.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  win32.rs
src/engine/: Capture.h  Capture_Mac.mm  Capture_Unix.cpp  Capture_Win.cpp
src/interface/: DrawView.cpp  DrawView.h  Window.cpp  Window.h  Window.mm
