[package]
name = "spatialshot-installer"
version = "0.1.0"
description = "Bootstrapper for Spatialshot"
authors = ["a7mddra"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3" 
zip = "0.6"
dirs = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
